dev component working

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -16,9 +16,23 @@
           <li class="nav-item">
             <a class="nav-link text-shadow" routerLink="/about"><button class="btn btn-outline-light">About</button></a>
           </li>
-          <li *ngIf="this.postService.role!=='client'" class="nav-item">
-            <a class="nav-link text-shadow"><button class="btn btn-outline-light" data-bs-toggle="modal"
-                data-bs-target="#exampleModal" (click)="this.postService.emptyUploadForm()">Upload</button></a>
+          <li *ngIf="this.postService.role!=='client'" class="nav-item dropdown">
+            <a class="nav-link " href="#" id="navbarDropdown3" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <button class="btn btn-outline-light dropdown-toggle">Admin</button>
+            </a>
+            <ul style="position: absolute;" class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown3">
+              <li>
+                <button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                  (click)="this.postService.emptyUploadForm()">Upload</button>
+              </li>
+              <li *ngIf="this.postService.role==='dev'">
+                <a class="dropdown-item" routerLink="/dev">Dev</a>
+              </li>
+              <li>
+                <a class="dropdown-item" routerLink="/user/saved">View Saved</a>
+              </li>
+            </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
