--- a/src/app/saved-posts/saved-posts.component.html
+++ b/src/app/saved-posts/saved-posts.component.html
@@ -1,8 +1,16 @@
 <app-nav></app-nav>
 <div class="container-fluid mt-5 text-light">
-  <div id="post-container" *ngFor="let post of postsArr" class="card-group mb-3"
-    style="overflow: hidden;display:inline-block">
-    <app-specific-post [post]="post"></app-specific-post>
-    <hr style="color: white;">
+  <div>
+    <div *ngIf="render" class="text-center">
+      <div id="post-container" *ngFor="let post of postsArr" class="card-group mb-3"
+        style="overflow: hidden;display:inline-block">
+        <app-specific-post [post]="post"></app-specific-post>
+        <hr style="color: white;">
+      </div>
+    </div>
   </div>
+</div>
+<div class="d-flex justify-content-center mt-1">
+  <app-view-more [loadIndex]="this.loadIndex" [loading]="this.loading" [categoriesLength]="2" (click)="this.loadMore()">
+  </app-view-more>
 </div>
