--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -15,7 +15,6 @@
   </div>
 </div>
 <div class="d-flex justify-content-center mt-1">
-  <app-view-more [route]="'search'" [loadIndex]="this.loadIndex" [loading]="this.loading" [categoriesLength]="1"
-    (click)="this.loadMore()">
+  <app-view-more [loadIndex]="this.loadIndex" [loading]="this.loading" [categoriesLength]="1" (click)="this.loadMore()">
   </app-view-more>
 </div>
