save posts added to product component

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -26,6 +26,12 @@
       <h4 class="fw-bold fs-2 text-danger"><span class="fw-normal text-light">Price:</span> ₹{{post.price}}</h4>
     </div>
     <p class="fw-normal fs-5"><em>{{post.freeShip?'Free Shipping':'Shipping Extra'}}</em></p>
+    <button *ngIf="!postService.savedPosts.includes(post.id);else unSave" (click)="savePost(post.id)"
+      class="btn btn-lg btn-outline-danger"><i class="fas fa-plus"></i> Save Post</button>
+    <ng-template #unSave>
+      <button (click)="unSavePost(post.id)" class="btn btn-lg btn-outline-danger"><i class="fas fa-times"></i>
+        Unsave Post</button>
+    </ng-template>
     <div class="description m-3 mb-5">
       <div class="card card-body border border-light" style="background-color: black;">
         <p class="fw-normal fs-3 text-light">Description <button class="btn btn-outline-light btn-sm shadow-none"
