--- a/src/app/saved-posts/saved-posts.component.html
+++ b/src/app/saved-posts/saved-posts.component.html
@@ -14,3 +14,4 @@
   <app-view-more [loadIndex]="this.loadIndex" [loading]="this.loading" [categoriesLength]="2" (click)="this.loadMore()">
   </app-view-more>
 </div>
+<app-scroll-to-top></app-scroll-to-top>
