savedPosts promise converted to Observabe

--- a/src/app/dev/dev.component.html
+++ b/src/app/dev/dev.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
-<div class="container" *ngIf="renderPage">
+<div class="container mb-5" style="margin-top: 100px;" *ngIf="renderPage">
   <table class="table table-dark table-striped mt-5 mb-5">
     <thead>
       <tr>
