--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<header>
+<header style="position: fixed; z-index: 9; width: 100%;top: 0;">
   <nav id="nav1" class="navbar navbar-dark bg-dark navbar-expand-lg shadow-lg position-relative">
     <div class="container-fluid fs-4 fw-bolder">
       <a class="navbar-brand fs-3 text-shadow text-light" href="#">AGS Market</a>
