--- a/src/app/saved-posts/saved-posts.component.html
+++ b/src/app/saved-posts/saved-posts.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
-<div class="container-fluid mt-5 text-light">
+<div class="container-fluid text-light" style="margin-top: 150px;">
   <div>
     <div *ngIf="render" class="text-center">
       <div id="post-container" *ngFor="let post of postsArr" class="card-group mb-3"
