--- a/src/app/dashboard/post-container/specific-post/specific-post.component.css
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.css
@@ -103,7 +103,7 @@
 
   @media only screen and (max-device-width: 616px) {
     .post1{
-      width:10em;min-height: 15em;margin-inline: 4px
+      width:10em;height: 17em;margin-inline: 4px
     }
     .image-con{
       height: 7em;overflow: hidden;min-height: 7em;
