--- a/src/app/dashboard/post-container/specific-post/specific-post.component.css
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.css
@@ -102,12 +102,18 @@
   }
 
   @media only screen and (max-device-width: 616px) {
+    #post-title{
+      font-size:unset;
+    }
+
     .post1{
       width:10em;height: 17em;margin-inline: 4px
     }
+
     .image-con{
       height: 7em;overflow: hidden;min-height: 7em;
     }
+
     .in-img{
       height: 100%;
       width: 100%;
